--- a/analytics-android-sample-app/src/main/res/values/strings.xml
+++ b/analytics-android-sample-app/src/main/res/values/strings.xml
@@ -26,7 +26,9 @@
 <resources>
 
   <string name="app_name">Segment.io Sample</string>
-  <string name="hello_world">Hello world!</string>
-  <string name="action_settings">Settings</string>
+  <string name="link_docs">Docs</string>
+  <string name="no_browser_available">No browser to open link</string>
+  <string name="track_button_a">Track Button A</string>
+  <string name="track_button_b">Track Button B</string>
 
 </resources>
