Add a new button to track

--- a/analytics-android-sample-app/src/main/res/values/strings.xml
+++ b/analytics-android-sample-app/src/main/res/values/strings.xml
@@ -30,5 +30,6 @@
   <string name="no_browser_available">No browser to open link</string>
   <string name="track_button_a">Track Button A</string>
   <string name="track_button_b">Track Button B</string>
+  <string name="track_button_c">Track Button C</string>
 
 </resources>
