Test clicker to test sequence in sample app

--- a/sample-app/src/main/res/values/strings.xml
+++ b/sample-app/src/main/res/values/strings.xml
@@ -34,5 +34,6 @@
   <string name="custom_event_name_hint">Type in a name for a custom event here</string>
   <string name="flush">Flush Events</string>
   <string name="name_required">Event name should be blank or empty</string>
+  <string name="test_sequence">Test Sequence</string>
 
 </resources>
