--- a/sample-app/src/main/res/values/strings.xml
+++ b/sample-app/src/main/res/values/strings.xml
@@ -33,10 +33,11 @@
   <string name="track_button_custom_event">Track Custom Event</string>
   <string name="custom_event_name_hint">Type in a name for a custom event here</string>
   <string name="flush">Flush Events</string>
-  <string name="name_required">Should be blank or empty</string>
+  <string name="name_required">Name should not be blank or empty</string>
   <string name="test_sequence">Test Custom Sequence</string>
   <string name="identify_button">Identify User</string>
   <string name="identify_user_id">Type in an ID to recognize the user</string>
   <string name="update_stats">Update Stats</string>
+  <string name="id_required">Id should not be blank or empty</string>
 
 </resources>
