Lazily load integrations
Also:
* Move map creation to a factory method

* rename sample app name

* Update changelogs

* Update docs

--- a/sample-app/src/main/res/values/strings.xml
+++ b/sample-app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
 
 <resources>
 
-  <string name="app_name">Segment.io Sample</string>
+  <string name="app_name">Segment Sample</string>
   <string name="action_view_docs">Docs</string>
   <string name="no_browser_available">No browser to open link</string>
   <string name="track_button_a">Track Button A</string>
