--- a/sample-app/src/main/res/values/strings.xml
+++ b/sample-app/src/main/res/values/strings.xml
@@ -36,6 +36,7 @@
   <string name="name_required">Name should not be blank or empty</string>
   <string name="test_sequence">Test Custom Sequence</string>
   <string name="identify_button">Identify User</string>
+    <string name="alias_button">Alias User</string>
   <string name="identify_user_id">Type in an ID to recognize the user</string>
   <string name="update_stats">Update Stats</string>
   <string name="id_required">Id should not be blank or empty</string>
