Rename Segment.io references to Segment

--- a/wear-sample/src/main/res/values/strings.xml
+++ b/wear-sample/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-  <string name="app_name">Segment.io Wear Sample</string>
+  <string name="app_name">Segment Wear Sample</string>
 
 </resources>
